<resources>
    <string name="app_name">OGO Driver</string>
    <string name="app_name_caps">OGO DRIVER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Driver Name</string>
    <string name="nav_header_subtitle">Driver ID </string>
    <string name="nav_header_mobile">Driver Mobile </string>
    <string name="nav_header_email">email</string>
    <string name="nav_header_app_version">V</string>
    <string name="nav_header_driver_type">Driver Type </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_logout">LogOut </string>
    <string name="navigation_drawer_order_details">ORDER DETAILS</string>
    <string name="navigation_drawer_order">Your order</string>
    <string name="navigation_drawer_scan_your_orders">Scan orders</string>
    <string name="navigation_drawer_order_individual_order">Individual Orders</string>
    <string name="navigation_drawer_order_bulk_report">Bulk Orders</string>
    <string name="navigation_drawer_order_invoice">Invoice</string>
    <string name="navigation_drawer_order_online">ONLINE</string>
    <string name="navigation_drawer_go_online">Go Online</string>
    <string name="navigation_drawer_contact_us">Contact Us</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="bottom_navigation_your_order">Orders</string>
    <string name="bottom_navigation_nearby_order">Nearby</string>
    <string name="online">You are online now.</string>
    <string name="offline">You are off-line now.Please go online to get orders.</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="logout_title">Logout?</string>
    <string name="logout_messege">Are you sure want to logout ?</string>
    <string name="logout_no">No</string>
    <string name="logout_yes">Logout</string>
    <string name="order_collection_title">Order Collected ?</string>
    <string name="order_collection_messege">Please make sure you collected order before going to next step.</string>
    <string name="order_collection_no">Not yet</string>
    <string name="order_collection_yes">Collected</string>
    <string name="order_delivered_title">order delivered ?</string>
    <string name="order_delivered_messege">Please make sure you delivered order before finishing / completing order.</string>
    <string name="order_delivered_no">Not yet</string>
    <string name="order_delivered_yes">delivered </string>
    <string name="order_return_collected_title"> Continue return trip ?</string>
    <string name="order_return_collected_messege">Please make sure you delivered order before going back.</string>
    <string name="order_return_collected_no">Not yet</string>
    <string name="order_return_collected_yes">Return</string>
    <string name="order_return_deliver_title"> Return Back ?</string>
    <string name="order_return_deliver_messege">Please make sure you delivered back/ Return back before finishing order.</string>
    <string name="order_return_deliver_no">Not yet</string>
    <string name="order_return_deliver_yes">Delivered</string>
    <string name="language_en">English</string>
    <string name="language_ar">العربية</string>
    <string name="language_en_msg">Please choose language.</string>
    <string name="language_ar_msg">اختر اللغة</string>
    <string name="language_note">Please choose different language.</string>
    <string name="navigation_drawer_go_online_description">Once you go online you will start receiving orders. </string>
    <string name="navigation_drawer_go_online_desc">You are online now.You will start receiving orders </string>
    <string name="location_title">Use Your Location</string>
    <string name="location_disclosure_description">This app collects location data to enable tracking features so that drivers of this application will get orders based on the latest nearby available location ,tracking order feature will activate even when the app is closed or not in use</string>
    <string name="no_thanks">No Thanks</string>
    <string name="location_turn_on">Turn On</string>
    <string name="activity_created">  Activity created. </string>
    <string name="order_details"> Order Details</string>
    <string name="order_history_details"> Order History Details</string>
    <string name="orders"> Orders </string>
    <string name="scanned_orders">Scanned Orders</string>
    <string name="scanning_orders">Scan QR Code</string>
    <string name="individual_orders">Individual Orders History</string>
    <string name="bulk_orders">Bulk Orders History</string>
    <string name="fatal_error"> My first Android non-fatal error </string>
    <string name="no_sender_location"> No Sender Location found. </string>
    <string name="cancel">Canceled</string>
    <string name="order_cancelled">Your order has been cancelled fom remote.Please press OK to accept next order.</string>
    <string name="switching_order">Order Switched</string>
    <string name="switching_order_message">Your order has been switched from remote. Please press OK to release current order. You will receive next order soon.</string>
    <string name="switched_order_assiged">Order Assigned</string>
    <string name="switched_order_assigned_message">Your order has been assigned from remote. Please press Ok to update you current order status and proceed or deliver accordingly.</string>
    <string name="welcome_title">OGO Home</string>
    <string name="welcome_msg">Welcome to OGo!</string>
    <string name="welcome_note">Important instructions </string>
    <string name="waiting_for_order"> You are online.Waiting for order.</string>
    <string name="welcome_inst1">* If you are online : Your app is ready to receive orders.Please wait.</string>
    <string name="welcome_inst2">* If you are offline : You will not get any order however you can use this app to check your orders history.In order to get new order please go online.</string>
    <string name="contact_us_title"> Contact Us </string>
    <string name="tv_contact_us_label"> Call Center : </string>
    <string name="contact_us_email"> Email : </string>
    <string name="contact_us_website_label"> Website : </string>
    <string name="youAreNotUpdatedTitle">Update Available!</string>
    <string name="youAreNotUpdatedMessage">A new version is available. Please update to latest version.</string>
    <string name="youAreNotUpdatedMessage1">A new version is available. Application is require to update.</string>
    <string name="youAreNotUpdatedMessage2">An update is available on Play Store.Please update.</string>
    <string name="youAreNotUpdatedMessage3"> :This app version is no longer supported. Please update your app from the Play Store.</string>
    <string name="newFeatures">Whats New ? </string>
    <string name="update">Update</string>
    <string name="order_details_date">Date:</string>
    <string name="order_details_payment_type">Payment type:</string>
    <string name="order_details_total_amt">Total Amount:</string>
    <string name="order_details_amt">1KWD</string>
    <string name="order_details_sender_name">Sender:</string>
    <string name="order_details_sender_address">Address:</string>
    <string name="order_details_sender_phone">Phone:</string>
    <string name="order_details_receiver_name">Receiver:</string>
    <string name="order_details_receiver_address">Address</string>
    <string name="order_details_receiver_phone">Phone</string>
    <string name="order_history_cancelled"> CANCELLED </string>
    <string name="order_history_completed"> COMPLETED </string>
    <string name="order_history_ongoing"> ONGOING </string>
    <string name="order_history_start_date">Start date</string>
    <string name="order_history_end_date">End date</string>
    <string name="order_history_payment_type">payment types:</string>
    <string name="order_history_order_status">order status:</string>
    <string name="order_history_order_source">source:</string>
    <string name="order_history_payment_lable"> Completed Orders </string>
    <string name="order_history_payment_count">0</string>
    <string name="order_history_payment_lable_amount">Total Amount</string>
    <string name="order_history_payment_total_amount">0</string>
    <string name="order_history_search">Search</string>
    <string name="order_history_total_amt">Total Amount:</string>
    <string name="order_history_total_dist">Total Distance:</string>
    <string name="my_orders_payment_types">Payment type</string>
    <string name="payment_types_title">Please select payment type</string>
    <string name="payment_types_order_status">Please select order status</string>
    <string name="payment_ok">OK</string>
    <string name="no_order">No orders found!</string>
    <string name="click_to_scan_orders">Click to Scan Order</string>
    <string name="your_scanned_orders">Your Scanned Order</string>
    <string name="barcode_title">No barcode detected</string>
    <string name="order_history_order_total_parcel">Total Parcel:</string>
    <string name="order_history_date">Date:</string>
    <string name="order_history_sender_address">Sender Address:</string>
    <string name="order_history_receiver_address">Receiver Address:</string>
    <string name="dismiss">DISMISS</string>
    <string name="login_text"> DRIVER LOGIN</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="empty_user_name">Please enter username.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="login">Login</string>
    <string name="van">VAN</string>
    <string name="bike">BIKE</string>
    <string name="car">CAR</string>
    <string name="login_ok">OK</string>
    <string name="login_cancel">Cancel</string>
    <string name="google_play_services_error">Google Play Services did not installed!</string>
    <string name="network_error_title">Network Error!</string>
    <string name="network_error_message">No Network Connection.</string>
    <string name="network_error_wifi_setting">Setting</string>
    <string name="network_error_cancel">Cancel</string>
    <string name="network_error_ok">Ok</string>
    <string name="color_them_string">#1b75bc</string>
    <string name="order_type"> Order Type :  </string>
    <string name="sender">Sender:</string>
    <string name="sender_address">Address:</string>
    <string name="receiver">Receiver:</string>
    <string name="receiver_address">Address:</string>
    <string name="order_rejected">Order rejected!</string>
    <string name="order_accepted">Order Accepted!</string>
    <string name="accept_order">Accept order? </string>
    <string name="skip_order"> Skip </string>
    <string name="order_source">Source</string>
    <string name="order_mobile">MOBILE</string>
    <string name="order_web">WEB</string>
    <string name="order_distance_text">Distance</string>
    <string name="order_distance_value">KM </string>
    <string name="sender_title"> Sender details</string>
    <string name="trip"> trip </string>
    <string name="go_to_sender_one"> Slide to go to sender </string>
    <string name="order_id"> Order ID: </string>
    <string name="receiver_title"> Receiver details</string>
</resources>