<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#d4e9f2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/header_layout"
        android:gravity="center"



        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:text="@string/youAreNotUpdatedTitle"
            android:textSize="20sp"
            android:textColor="#46a5df"
            android:textAlignment="center"
            android:id="@+id/textMessage"
            android:layout_margin="@dimen/dimen_5dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="@font/avenir_next_condensed_bold"

            />
        <TextView
            android:id="@+id/textMessageDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/youAreNotUpdatedMessage3"
            android:textSize="20sp"
            android:textColor="#46a5df"
            android:textAlignment="center"
            android:layout_margin="@dimen/dimen_5dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:fontFamily="@font/avenir_next_condensed_medium"

            />
        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_yellow_dark" />
        <TextView
            android:id="@+id/textMessageNewFeatures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newFeatures"
            android:textSize="16sp"
            android:textColor="#46a5df"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:fontFamily="@font/avenir_next_condensed_medium"
            android:layout_marginTop="@dimen/dimen_5dp"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/header_layout"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        >

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:background="@color/color_them"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="@dimen/dimen_5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="@font/avenir_next_condensed_bold"
            />






    </LinearLayout>

  </RelativeLayout>