<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="#eeeeee"
	android:fillViewport="true"
	android:fitsSystemWindows="true"
	
	>
	
	<RelativeLayout
		android:id="@+id/row"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		
		<FrameLayout
			android:id="@+id/content_sender_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/dimen_5dp">
			
			
			<!--  android:fontFamily="@font/avenir_next_condensed_medium"-->
			<!--android:background="#eeeeee"-->
			<!-- android:background="@color/color_them"-->
			
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/round_shape_sender"
				android:orientation="vertical"
				android:padding="@dimen/dimen_5dp">
				
				<LinearLayout
					android:id="@+id/tvTitleSenderDetailLayout"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:weightSum="2"
					
					>
					
					<ImageView
						android:id="@+id/ivSender"
						android:layout_width="@dimen/dimen_50dp"
						android:layout_height="@dimen/dimen_50dp"
						android:layout_marginStart="@dimen/dimen_5dp"
						android:layout_weight="0.2"
						
						android:gravity="center_vertical"
						android:padding="@dimen/dimen_5dp"
						android:src="@drawable/ic_sender"
						
						/>
					
					<TextView
						android:id="@+id/tvTitleSenderDetail"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:layout_margin="16dp"
						android:layout_weight="1.8"
						android:fontFamily="@font/avenir_next_condensed_bold"
						android:text="@string/sender_title"
						
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textColor="@color/white"
						
						/>
				
				
				</LinearLayout>
				
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:focusableInTouchMode="false"
					android:hint="@string/order_id"
					android:textColorHint="@color/color_yellow_dark"
					
					app:hintTextAppearance="?android:attr/textAppearanceSmall">
					
					<EditText
						android:id="@+id/editOrderId"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:editable="false"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:fontFamily="@font/avenir_next_condensed_medium"
						android:inputType="none"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textColor="@color/white"
            android:textStyle="italic"
						
						/>
				</com.google.android.material.textfield.TextInputLayout>
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:focusableInTouchMode="false"
					android:hint="@string/sender"
					android:textColorHint="@color/color_yellow_dark"
					app:hintTextAppearance="?android:attr/textAppearanceSmall">
					
					<EditText
						android:id="@+id/editSenderName"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:editable="false"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:fontFamily="@font/avenir_next_condensed_medium"
						android:inputType="none"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textColor="@color/white"
            android:textStyle="italic"
            />
				</com.google.android.material.textfield.TextInputLayout>
				
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:focusableInTouchMode="false"
					android:hint="@string/sender_address"
					android:textColorHint="@color/color_yellow_dark"
					app:hintTextAppearance="?android:attr/textAppearanceSmall"
          
          >
					
					<EditText
						android:id="@+id/editSenderAddress"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:editable="false"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:fontFamily="@font/avenir_next_condensed_medium"
						android:inputType="none"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textColor="@color/white"
						android:textStyle="italic"
						/>
				</com.google.android.material.textfield.TextInputLayout>
			
			
			</LinearLayout>
			<!-- Transparent layer -->
			<RelativeLayout
				android:id="@+id/transparentOverlaySender"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@null">
			
			
			</RelativeLayout>
		
		
		</FrameLayout>
		
		<FrameLayout
			android:id="@+id/content_receiver_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/orderTypeLayout"
			android:padding="@dimen/dimen_5dp">
			
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/round_shape_receiver"
				android:orientation="vertical"
				android:padding="@dimen/dimen_5dp">
				
				<LinearLayout
					android:id="@+id/tvTitleReceiverDetailLayout"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:weightSum="2"
					
					>
					
					<ImageView
						android:id="@+id/ivReceive"
						android:layout_width="@dimen/dimen_50dp"
						android:layout_height="@dimen/dimen_50dp"
						android:layout_marginStart="@dimen/dimen_5dp"
						android:layout_weight="0.2"
						
						android:gravity="center_vertical"
						android:padding="@dimen/dimen_5dp"
						android:src="@drawable/ic_receiver"
						
						/>
					
					<TextView
						android:id="@+id/tvTitleReceiveDetail"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:layout_margin="16dp"
						android:layout_weight="1.8"
						android:fontFamily="@font/avenir_next_condensed_bold"
						android:text="@string/receiver_title"
						
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textColor="@color/white"
						
						/>
				
				
				</LinearLayout>
				
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:focusableInTouchMode="false"
					android:hint="@string/receiver"
					android:textColorHint="@color/color_yellow_dark"
					app:hintTextAppearance="?android:attr/textAppearanceSmall"
          
          >
					
					<EditText
						android:id="@+id/editReceiverName"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:editable="false"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:fontFamily="@font/avenir_next_condensed_medium"
						android:inputType="none"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textColor="@color/white"
						android:textStyle="italic"
						/>
				</com.google.android.material.textfield.TextInputLayout>
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:focusableInTouchMode="false"
					android:hint="@string/receiver_address"
					android:textColorHint="@color/color_yellow_dark"
					app:hintTextAppearance="?android:attr/textAppearanceSmall"
         
          >
					
					<EditText
						android:id="@+id/editReceiverAddress"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:editable="false"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:fontFamily="@font/avenir_next_condensed_medium"
						android:inputType="none"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textColor="@color/white"
						android:textStyle="italic"
						/>
				</com.google.android.material.textfield.TextInputLayout>
			
			
			</LinearLayout>
			
			<!-- Transparent layer -->
			<RelativeLayout
				android:id="@+id/transparentOverlayReceiver"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@null">
			
			
			</RelativeLayout>
		
		
		</FrameLayout>
		
		
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/content_receiver_layout"
			android:layout_marginTop="@dimen/dimen_5dp"
			android:paddingStart="@dimen/dimen_30dp"
			android:paddingEnd="@dimen/dimen_30dp"
			android:paddingBottom="@dimen/dimen_30dp"
			
			>
			
			
			<!--
			app:sv_buttonImage="@mipmap/ic_launcher"
			-->
			<ng.max.slideview.SlideView
				android:id="@+id/goToSenderSlideView"
				android:layout_width="match_parent"
				android:layout_height="@dimen/dimen_50dp"
				android:fontFamily="@font/avenir_next_condensed_demi_bold"
				app:sv_animateSlideText="true"
				app:sv_buttonBackgroundColor="@color/colorYellowTheme"
				app:sv_reverseSlide="false"
				app:sv_slideBackgroundColor="@color/white"
				app:sv_slideText="@string/go_to_sender_one"
				app:sv_slideTextColor="@color/color_them"
				app:sv_strokeColor="@color/colorYellowTheme"
				
				/>
		
		
		</FrameLayout>
		
		
		<RelativeLayout
			android:id="@+id/orderTypeLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:layout_below="@+id/content_sender_layout"
			android:layout_gravity="center"
			android:gravity="center"
			
			>
			
			<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:orientation="horizontal"
				
				>
				
				<!-- android:src="@drawable/trip_single_en"  -->
				
				<ImageView
					android:id="@+id/ivOrderType"
					android:layout_width="@dimen/dimen_100dp"
					android:layout_height="@dimen/dimen_50dp"
					android:scaleType="centerInside"
					android:src="@drawable/ic_image_preview" />
				
				<TextView
					android:id="@+id/tvOrderType"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:fontFamily="@font/avenir_next_condensed_bold"
					android:gravity="center_horizontal"
					android:includeFontPadding="false"
					android:text="@string/trip"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/black"
					
					
					/>
			
			</androidx.appcompat.widget.LinearLayoutCompat>
		
		</RelativeLayout>
	
	
	</RelativeLayout>
</ScrollView>

