<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LocationDisclosureActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/locationHeaderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="@dimen/dimen_40dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_location_on"

                    />

                <TextView
                    android:id="@+id/tvLocationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_condensed"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/location_title"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/tvLocationDisclosureDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_condensed_medium"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/location_disclosure_description"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <ImageView

                    android:layout_width="@dimen/dimen_180dp"
                    android:layout_height="@dimen/dimen_180dp"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/location_on_map_one" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locationHeaderLayout"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:orientation="horizontal"

                android:weightSum="1">

                <TextView
                    android:id="@+id/tvNoThanks"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:fontFamily="@font/avenir_next_condensed_medium"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/no_thanks"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black"

                    />

                <TextView
                    android:id="@+id/tvLocationTurnOn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:fontFamily="@font/avenir_next_condensed_medium"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/location_turn_on"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>